--- a/src/styles.css
+++ b/src/styles.css
@@ -34,12 +34,12 @@ body {
   
 }
 
-header {
+/* header {
   
   position: sticky;
   top: 0; /* 클래스 sticky인 요소 안에서 top값이 0이되면 sticky를 적용 */
-  background: #8a4baf;
-}
+  /* background: #8a4baf; */
+/* } */
 
 /* header {
   position: absolute;
